--- a/Html/desserts.html
+++ b/Html/desserts.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dessert Recipes</title>
+    <link rel="shortcut icon" href="../Assets/foodfiestaicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Assets/foodfiestaicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -318,16 +320,8 @@
       </ul>
       <div class="box">
         <div class="input-wrapper">
-          <button class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="25px" width="25px">
-              <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff"
-                d="M11.5 21C16.7467 21 21 16.7467 21 11.5C21 6.25329 16.7467 2 11.5 2C6.25329 2 2 6.25329 2 11.5C2 16.7467 6.25329 21 11.5 21Z">
-              </path>
-              <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" stroke="#fff" d="M22 22L20 20">
-              </path>
-            </svg>
-          </button>
-          <input placeholder="Aaj kya pakana hai?" class="input text-dark" name="text" type="text">
+      
+          <input placeholder="Aaj kya pakana hai?" class="input text-dark" name="text" type="text" style="display: none;">
         </div>
       </div>
     </div>
