--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BornToBeChef</title>
+  <link rel="shortcut icon" href="./Assets/foodfiestaicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -217,7 +218,7 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
 </head>
 
 <body>
-
+<div id="page-content" style="width: 100vw; height: auto; overflow-x: hidden;">
   <!-- first Navigation -->
 
   <div class="navigation">
@@ -769,13 +770,32 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
       </div>
     </footer>
     <!-- Copyright & Privacy Section -->
-    <div class="footer-bottom">
+    <div class="footer-bottom" id="dis">
       <p>© Copyright 2025 All rights of publications are reserved by <span>Food Fiesta</span>.
         Reproduction without consent is not allowed.</p>
       <a href="#">Privacy Policy</a>
     </div>
   </footer>
+</div></div>
+  <h1 class="hii">Recipe in progress</h1>
+<div id="page-loader">
 
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div id=area>
+      <div id="sides">
+          <div id="pan"></div>
+          <div id="handle"></div>
+      </div>
+      <div id="pancake">
+          <div id="pastry"></div>
+      </div>
+  </div>
+</div>
+</div>
 
 
 
